fixed overflow issue in cafe home and styles.scc

--- a/src/app/cafe/header/header.component.scss
+++ b/src/app/cafe/header/header.component.scss
@@ -10,6 +10,7 @@ header {
   padding-top: 2px;
 
   .gohome {
+    z-index: 1;
     img {
       height: 100px;
       width: auto;
